--- a/class-api/package.json
+++ b/class-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "./node_modules/.bin/nodemon api.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "method-override": "^3.0.0",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "nodemon": "^2.0.9"
   }
 }
