--- a/class-api/package.json
+++ b/class-api/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "school",
+  "name": "class-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "./node_modules/.bin/nodemon api.js"
+    "start": "./node_modules/.bin/nodemon api.js"
   },
-  "author": "",
+  "author": "Samit Kumar Patel",
   "license": "ISC",
   "dependencies": {
     "assert": "^1.4.1",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "method-override": "^3.0.0",
+    "mocha": "^9.0.2",
     "mongodb": "^3.1.10",
     "nodemon": "^2.0.9"
   }
